--- a/card.css
+++ b/card.css
@@ -9,3 +9,21 @@ height: 100vh;
 align-items: center;
 justify-content: center;
 }
+.card{
+background: white;
+border-radius:15px;
+width: 300px;
+text-align: relative;
+}
+.card-harder img{
+width: 100px;
+height: 100px;
+margin-top: 20px;
+border-radius:50%;
+}
+.card-body{
+padding:15px;
+}
+.card-body h2{
+margin-bottom:5px;
+}
