--- a/card.css
+++ b/card.css
@@ -1,6 +1,7 @@
 {
 margin: 0;
 padding: 0;
+background:purple;
 }
 body{
 background:#f0f0f0;
@@ -13,9 +14,10 @@ justify-content: center;
 background: white;
 border-radius:15px;
 width: 300px;
-text-align: relative;
+text-align: center;
+position: relative;
 }
-.card-harder img{
+.card-hearder img{
 width: 100px;
 height: 100px;
 margin-top: 20px;
@@ -26,4 +28,21 @@ padding:15px;
 }
 .card-body h2{
 margin-bottom:5px;
+}
+.card-body p{
+color:#777;
+padding:15px;
+}
+.card-footer{
+background:#fff;
+padding:15px;
+transition: all 0.4s ease;
+opacity:0;
+transform:translateY(20px);
+visibility: hidden;
+}
+.card:hover .card-footer{
+opacity:1;
+transform:translateY(0);
+visibility: visible;
 }
